Drafting more ideas

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
 					</ul>
 				</section>
 
+                <section>
+                    <h2>Diagram popularności git (SO survey)</h2>
+                </section>
+
+                <section>
+                    <h2>Cytat z Torvaldsa</h2>
+                </section>
+
 				<section>
 					<h2>GitHub</h2>
 					<ul>
@@ -98,6 +106,11 @@
 						<li class="fragment">Portal społecznościowy dla programistów!</li>
 					</ul>
 				</section>
+
+                <section>
+                    <h2>Portal społecznościowy</h2>
+                    <p>todo</p>
+                </section>
 
 				<section>
 					<h2>Terminologia</h2>
@@ -117,6 +130,10 @@
 					<h2>Commit</h2>
 					<img class="graph-example" src="img/screens/commit.png">
 				</section>
+
+                <section>
+                    <h2>Krótko o opisach commitów</h2>
+                </section>
 
 				<section>
 					<h2>Master</h2>
@@ -149,13 +166,12 @@
 					<img class="graph-example" src="img/screens/pull-request.png">
 				</section>
 
+                <section>
+                    <h3>GitHub workflow</h3>
+                </section>
+
 				<section>
 					<h3>GitHub jako pozycja w CV</h3>
-					<ol>
-						<li class="fragment">Nie wstydź się!</li>
-						<li class="fragment">Wskaż fajniejsze projekty</li>
-						<li class="fragment">Napisz README.md</li>
-					</ol>
 				</section>
 
                 <section>
@@ -174,12 +190,34 @@
                     <h3>Open source! <3</h3>
                 </section>
 
+                <section>
+                    <h3>Kilka porad</h3>
+                </section>
+
+                <section>
+                    <h3>REAMDE.md</h3>
+                </section>
+
+                <section>
+                    <h3>Trzymaj porządek</h3>
+                </section>
+
+                <section>
+                    <h3>Wskaż fajniejsze projekty na swojej stronie</h3>
+                    <h4>Możesz użyc GitHub pages!</h4>
+                </section>
+
+                <section>
+                    <h3>Dodaj info o swojej lokalizacji</h3>
+                </section>
+
 				<section>
 					<h3>Podsumowanie</h3>
 					<ol>
 						<li class="fragment">CVS</li>
 						<li class="fragment">git</li>
 						<li class="fragment">GitHub</li>
+                        <li class="fragment">GitHub CV</li>
 					</ol>
 				</section>
 
@@ -196,6 +234,7 @@
 					<ol>
 						<li class="fragment">git-scm</li>
 						<li class="fragment">man git [komenda]</li>
+                        <li class="fragment">git koans</li>
 					</ol>
 				</section>
 			</div>
