Company info + contact information

--- a/index.html
+++ b/index.html
@@ -237,6 +237,77 @@
                         <li class="fragment">git koans</li>
 					</ol>
 				</section>
+
+                <section data-background="img/pp/keepcalm.jpg">
+                    <aside class="notes">
+                        <ul>
+                        </ul>
+                    </aside>
+                </section>
+
+                <section data-background="img/pp/mapa.png">
+                    <aside class="notes">
+                        <ul>
+                        </ul>
+                    </aside>
+                </section>
+
+                <section data-background="img/pp/ciasto.jpg">
+                    <aside class="notes">
+                        <ul>
+                        </ul>
+                    </aside>
+                </section>
+
+                <section data-background="img/pp/scrum.jpg">
+                    <aside class="notes">
+                        <ul>
+                        </ul>
+                    </aside>
+                </section>
+
+                <section data-background="img/pp/planszowki.jpg">
+                    <aside class="notes">
+                        <ul>
+                        </ul>
+                    </aside>
+                </section>
+
+                <section data-background="img/pp/choinka.jpg">
+                    <aside class="notes">
+                        <ul>
+                        </ul>
+                    </aside>
+                </section>
+
+                <section>
+                    <h2>Podsumowanie</h2>
+                    <ol>
+                        <li class="fragment">Co przeszkadza nam w rozwoju?</li>
+                        <li class="fragment">Małe rzeczy, duże efekty.</li>
+                        <li class="fragment">Proste, ale ważne zasady.</li>
+                        <li class="fragment">A jeśli chcemy się jednak trochę pomęczyć? ;)</li>
+                    </ol>
+
+                    <aside class="notes">
+                        <ul>
+                            <li>mam nadziję, że coś wynieśliście</li>
+                        </ul>
+                    </aside>
+                </section>
+
+                <section>
+                    <h3>Dziękuję pięknie za uwagę</h3>
+                    <h4>Dołączcie do nas!</h4>
+                    <p class="text-small pp-color">positive-power.pl/kariera</p><br>
+
+                    <h4>Pytania?</h4>
+                    <p class="text-small">
+                        Twitter: @dwdmzr <br>
+                        Facebook: /dwd.mazur <br>
+                        GitHub: /dmazur <br>
+                    </p>
+                </section>
 			</div>
 
 		</div>
