--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 				</section>
 
 				<section>
-					<h2>Po co w ogóle mnie słuchać?</h2>
-					<h3 class="fragment">I dlaczego mówię akurat o tym?</h3>
+					<h2>Dlaczego mówię akurat o tym?</h2>
 				</section>
 
 				<section>
@@ -76,25 +75,22 @@
 				</section>
 
 				<section>
-					<h2>git</h2>
+					<h2>Dlaczego akurat git?</h2>
 				</section>
+
+                <section>
+					<img class="graph-example" src="img/screens/so.png">
+                </section>
+
+                <section>
+					<blockquote>
+						<p>I decided I could write something better than everything out there in two weeks. <br> And I was right. </p> <br /> -- Linus Torvalds
+					</blockquote>
+                </section>
 
 				<section>
-					<h2>Dlaczego akurat git?</h2>
-					<ul>
-						<li class="fragment">Bo jest najpopularniejszy</li>
-						<li class="fragment">Bo jest szybki</li>
-						<li class="fragment">Bo jest rozproszony</li>
-					</ul>
+					<h2>Git jest rozproszony</h2>
 				</section>
-
-                <section>
-                    <h2>Diagram popularności git (SO survey)</h2>
-                </section>
-
-                <section>
-                    <h2>Cytat z Torvaldsa</h2>
-                </section>
 
 				<section>
 					<h2>GitHub</h2>
@@ -107,14 +103,8 @@
 					</ul>
 				</section>
 
-                <section>
-                    <h2>Portal społecznościowy</h2>
-                    <p>todo</p>
-                </section>
-
 				<section>
 					<h2>Terminologia</h2>
-					<p>Co to jest repozytorium?</p>
 					<img class="graph-example" src="img/graph/empty.png">
 				</section>
 
@@ -133,6 +123,10 @@
 
                 <section>
                     <h2>Krótko o opisach commitów</h2>
+                </section>
+
+                <section>
+                    <img class="graph-example" src="img/screens/poprawki.png">
                 </section>
 
 				<section>
@@ -167,52 +161,55 @@
 				</section>
 
                 <section>
-                    <h3>GitHub workflow</h3>
+                    <h2>GitHub workflow</h2>
                 </section>
 
 				<section>
-					<h3>GitHub jako pozycja w CV</h3>
+					<h2>GitHub jako pozycja w CV</h2>
 				</section>
 
                 <section>
-                    <h3>Jak mieć cokolwiek na GitHubie?</h3>
+                    <h2>Jak mieć cokolwiek na GitHubie?</h2>
                 </section>
 
                 <section>
-                    <h3>Samodzielne kodzenie</h3>
+                    <h2>Samodzielne kodzenie</h2>
                 </section>
 
                 <section>
-                    <h3>Projekty z uczelni / dla znajomych</h3>
+                    <h2>Projekty z uczelni / dla znajomych</h2>
                 </section>
 
                 <section>
-                    <h3>Open source! <3</h3>
+                    <h2>Open source! <3</h2>
+                    <img class="graph-example" src="img/screens/commit.png">
                 </section>
 
                 <section>
-                    <h3>Kilka porad</h3>
+                    <h2>Kilka porad</h2>
                 </section>
 
                 <section>
-                    <h3>REAMDE.md</h3>
+                    <h2>REAMDE.md</h2>
+                    <img class="graph-example" src="img/screens/symfony.png">
                 </section>
 
                 <section>
-                    <h3>Trzymaj porządek</h3>
+                    <h2>Trzymaj porządek</h2>
+                    <h4>Możesz przypiąć repozytoria na swoim profilu</h4>
                 </section>
 
                 <section>
-                    <h3>Wskaż fajniejsze projekty na swojej stronie</h3>
+                    <h2>Wskaż fajniejsze projekty na swojej stronie</h2>
                     <h4>Możesz użyc GitHub pages!</h4>
                 </section>
 
                 <section>
-                    <h3>Dodaj info o swojej lokalizacji</h3>
+                    <h2>Dodaj info o swojej lokalizacji</h2>
                 </section>
 
 				<section>
-					<h3>Podsumowanie</h3>
+					<h2>Podsumowanie</h2>
 					<ol>
 						<li class="fragment">CVS</li>
 						<li class="fragment">git</li>
@@ -222,7 +219,7 @@
 				</section>
 
 				<section>
-					<h3>O czym nie opowiedziałem</h3>
+					<h2>O czym nie opowiedziałem</h2>
 					<ol>
 						<li class="fragment">Zaawansowane komendy</li>
 						<li class="fragment">Submoduły, tagi</li>
@@ -230,11 +227,12 @@
 				</section>
 
 				<section>
-					<h3>Więcej informacji</h3>
+					<h2>Więcej informacji</h2>
 					<ol>
 						<li class="fragment">git-scm</li>
 						<li class="fragment">man git [komenda]</li>
                         <li class="fragment">git koans</li>
+                        <li class="fragment">try.github.io</li>
 					</ol>
 				</section>
 
@@ -276,22 +274,6 @@
                 <section data-background="img/pp/choinka.jpg">
                     <aside class="notes">
                         <ul>
-                        </ul>
-                    </aside>
-                </section>
-
-                <section>
-                    <h2>Podsumowanie</h2>
-                    <ol>
-                        <li class="fragment">Co przeszkadza nam w rozwoju?</li>
-                        <li class="fragment">Małe rzeczy, duże efekty.</li>
-                        <li class="fragment">Proste, ale ważne zasady.</li>
-                        <li class="fragment">A jeśli chcemy się jednak trochę pomęczyć? ;)</li>
-                    </ol>
-
-                    <aside class="notes">
-                        <ul>
-                            <li>mam nadziję, że coś wynieśliście</li>
                         </ul>
                     </aside>
                 </section>
